some easy parts of java 1.8 compatibility